--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYTPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -37,7 +37,7 @@
     <tbody>
       <tr>
         <td>2010-2018</td>
-        <td>Lived</td>
+        <td>Lived and am continue to live.</td>
       </tr>
       <tr>
         <td>2010</td>
@@ -53,7 +53,6 @@
     <tr>
       <td>Learning Life</td>
       <td>🥡</td>
-      <td>Fruit</td>
     </tr>
     <tr>
       <td>Sucking at Life</td>
